# Aegis

./: .gitignore  README.md
DOCUMENTS/: CONOPS_AEGIS.md  Compliance-Manifest-v1.0.md  PDR_AEGIS.md  PLAN_AEGIS.md  SDD_AEGIS.md  SRS_AEGIS.md  STP_AEGIS.md  compliance-as-code.md
aegis/: .gitignore  Cargo.toml  README.md  generate_logs.ps1  logs.json
aegis/.cargo/: config.toml
aegis/DOCS/: WINDOWS_HARDENING.md
aegis/rules/: log_formats.toml
aegis/src/: config.rs  dashboard.rs  dispatcher.rs  ledger.rs  lib.rs  main.rs  models.rs  monitor.rs  notification.rs  redactor.rs  report.rs  watcher.rs
aegis/src/parsers/: json.rs  mod.rs  plain.rs
aegis/tests/: resilience_test.rs  stress_test.rs
inventory/src/: lib.rs
ledger/: Cargo.toml
ledger/src/: lib.rs  main.rs
sentinel/: Cargo.toml  sentinel.toml
sentinel/src/: config.rs  dispatcher.rs  main.rs  monitor.rs
vortex/: Cargo.toml
vortex/src/: main.rs
