[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.18"
sha2 = "0.10.8"

# Phase 2 & 3: Ingestion & Ledger
tokio = { version = "1.32", features = ["full"] }
notify = "6.1"
rayon = "1.8"

# Phase 4 & 6: Heartbeat & UX Evolution
ratatui = "0.26.0"
crossterm = "0.27.0"
winrt-notification = "0.5"
genpdf = "0.2"
itertools = "0.12"
dirs-next = "2.0"
rand = "0.8"
flate2 = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "fat"            # Complete inter-crate optimization
codegen-units = 1      # Maximum optimization at the cost of compile time
panic = "abort"        # Minimize binary size (no unwinding info)
strip = true           # Remove debug symbols from final binary
