[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6.1"
regex = "1.10"
notify-rust = "4.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
chrono = "0.4" # For debouncing timestamps
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
