[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4.23"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
toml = "0.8.19"
tiktoken-rs = "0.6.0"
rayon = "1.10.0"
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
quote = "1.0"
tempfile = "3.16.0"
dotenvy = "0.15.7"
